fix: remove negative margin right on mobile header

--- a/app/assets/style/layout/_header.scss
+++ b/app/assets/style/layout/_header.scss
@@ -71,6 +71,7 @@
 
 			&__list {
 				flex-wrap: wrap;
+				margin-right: 0;
 			}
 
 			&__item {
